kubernetes/common.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: swosh
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongodb
  namespace: swosh
subsets:
  - addresses:
      - ip: 172.16.16.9
    ports:
      - port: 27017
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: swosh
  labels:
    expose: all
spec:
  headers:
    # https://scotthelme.co.uk/a-new-security-header-feature-policy/
    featurePolicy: "accelerometer 'none';ambient-light-sensor 'none';autoplay 'none';camera 'none';encrypted-media 'none';fullscreen 'self';geolocation 'self';gyroscope 'none';magnetometer 'none';microphone 'none';midi 'none';payment 'self';picture-in-picture 'none';speaker 'self';sync-xhr 'none';usb 'none';vibrate 'none';vr 'none';"
