kubernetes/prod.yml
apiVersion: v1
kind: Service
metadata:
  name: swosh
  namespace: swosh
spec:
  ports:
    - name: backend
      port: 8080
      protocol: TCP
  selector:
    app: swosh
    env: prod
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: swosh-prod-redirect
  namespace: swosh
  labels:
    expose: public
    env: prod
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`swosh.me`)
      kind: Rule
      services:
        - name: swosh
          port: 8080
      middlewares:
        - name: secured
          namespace: middleware
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: swosh-prod-https
  namespace: swosh
  labels:
    expose: public
    env: prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`swosh.me`)
      kind: Rule
      services:
        - name: swosh
          port: 8080
      middlewares:
        - name: secured
          namespace: middleware
        - name: security-headers
          namespace: swosh
  tls:
    certResolver: namecheap
    options:
      name: default
      namespace: infra
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swosh
  namespace: swosh
  labels:
    app: swosh
    env: prod
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: swosh
      env: prod
  template:
    metadata:
      labels:
        app: swosh
        env: prod
    spec:
      containers:
        - name: swosh
          image: edholm/swosh:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 20
            periodSeconds: 8
            timeoutSeconds: 2
            failureThreshold: 10
          livenessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 20
            periodSeconds: 3
            timeoutSeconds: 2
            failureThreshold: 10
